fixed angular acceleration / motion profiling